--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "db:init": "psql -U postgres -f db/schema.sql",
     "db:seed": "psql -U postgres -f db/seed.sql",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/joinpursuit/tuner-full-stack-app#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "jest": "^27.4.7",
+    "pg-promise": "^11.5.0",
     "supertest": "^6.2.0"
   }
 }
