--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,14 +12,18 @@
     "type": "git",
     "url": "git+https://github.com/joinpursuit/tuner-full-stack-app.git"
   },
-  "author": "K. Rafalski",
+  "author": "K. Johnson",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/joinpursuit/tuner-full-stack-app/issues"
   },
   "homepage": "https://github.com/joinpursuit/tuner-full-stack-app#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jest": "^27.4.7",
+    "pg-promise": "^11.5.1",
     "supertest": "^6.2.0"
   }
 }
