--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "./node_modules/.bin/cypress open",
+    "test": "cypress open",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
